# nmiq

./: README.md  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
src/nmiq/: __init__.py  __init__.pyi  __main__.py  core.py  fwhm.py  mask.py
src/nmiq/tasks/: __init__.py  __init__.pyi  bkgvar3d.py  contrast_cyl3d.py  crc_cyl3d.py  lsf.py  summary.py
test/: test_bkgvar3d_task.py  test_contrast_cyl3d_task.py  test_core.py  test_fwhm.py  test_lsf_task.py  test_main.py  test_mask.py
test/data/300/: Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_1.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_10.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_11.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_12.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_2.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_3.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_4.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_5.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_6.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_7.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_8.dcm  Patient_unif290725_Study_1_Scan_5_Bed_1_Dyn_9.dcm
test/data/CT/: 1.2.840.114546.1.0.1.167798529.1753780604.26444.147^CT.dcm  1.2.840.114546.1.0.1.167798529.1753780604.26444.148^CT.dcm  1.2.840.114546.1.0.1.167798529.1753780604.26444.149^CT.dcm  1.2.840.114546.1.0.1.167798529.1753780604.26444.150^CT.dcm  1.2.840.114546.1.0.1.167798529.1753780604.26444.151^CT.dcm  1.2.840.114546.1.0.1.167798529.1753780604.26444.152^CT.dcm  1.2.840.114546.1.0.1.167798529.1753780604.26444.153^CT.dcm  1.2.840.114546.1.0.1.167798529.1753780604.26444.154^CT.dcm  (+124 more)
(+95 files in other folders)
