[build-system]
requires = [
	"setuptools>=42",
	"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nmiq"
version = "0.0.1"
requires-python = ">= 3.10"
authors = [
	{name = "Chris Walther Andersen", email = "cwa@rsyd.dk"},
]
description = "Code for performing image quality analysis in nuclear medicine images."
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
	# How mature is this project? Common values are
	#   3 - Alpha
	#   4 - Beta
	#   5 - Production/Stable
	"Development Status :: 3 - Alpha",
	# Pick your license as you wish (see also "license" above)
	"License :: OSI Approved :: MIT License",
	# Specify the Python versions you support here.
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]
dependencies = [
	'numpy',
	'SimpleITK',
	'scipy',
	'matplotlib'
]

[project.urls]
Repository = "https://github.com/cwand/nmiq"

[tool.pytest.ini_options]
addopts = "--cov=nmiq --cov-report term-missing"
testpaths = [
	"test",
]

[tool.coverage.report]
exclude_also = [
	"if __name__ == .__main__.:",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
#max-line-length = 100
